--- a/UE_2/app/src/main/res/values/strings.xml
+++ b/UE_2/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">UE_2</string>
+    <string name="hello_world">Hello World</string>
+    <string name="do_something">Do something</string>
+    <string name="toast">This is a Toast</string>
+    <string name="switch_to_activity2">Switch to Activity 2</string>
+    <string name="switch_to_activity1">Switch to Activity 1</string>
+
+    <string name="activity_2">That is Activity 2</string>
+    <string name="activity_1">That is Activity 1</string>
 </resources>
