--- a/UE_2/app/src/main/res/values-de-rAT/strings.xml
+++ b/UE_2/app/src/main/res/values-de-rAT/strings.xml
@@ -4,9 +4,11 @@
     <string name="hello_world">Hallo Welt</string>
     <string name="do_something">Tu etwas</string>
     <string name="toast">Das ist ein Toast</string>
+    <string name="switch_to_activity3">Wechsle zur Aktivität 3</string>
     <string name="switch_to_activity2">Wechsle zur Aktivität 2</string>
     <string name="switch_to_activity1">Wechsle zur Aktivität 1</string>
 
+    <string name="activity_3">Das ist Aktivität 3</string>
     <string name="activity_2">Das ist Aktivität 2</string>
     <string name="activity_1">Das ist Aktivität 1</string>
 
