--- a/UE_2/app/src/main/res/values/strings.xml
+++ b/UE_2/app/src/main/res/values/strings.xml
@@ -3,9 +3,11 @@
     <string name="hello_world">Hello World</string>
     <string name="do_something">Do something</string>
     <string name="toast">This is a Toast</string>
+    <string name="switch_to_activity3">Switch to Activity 3</string>
     <string name="switch_to_activity2">Switch to Activity 2</string>
     <string name="switch_to_activity1">Switch to Activity 1</string>
 
+    <string name="activity_3">That is Activity 3</string>
     <string name="activity_2">That is Activity 2</string>
     <string name="activity_1">That is Activity 1</string>
 </resources>
