--- a/UE_2/app/src/main/res/values/strings.xml
+++ b/UE_2/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">UE_2</string>
     <string name="hello_world">Hello World</string>
     <string name="do_something">Do something</string>
-    <string name="toast">This is a Toast</string>
+    <string name="toast">Hey, I am doing something</string>
     <string name="switch_to_activity3">Switch to Activity 3</string>
     <string name="switch_to_activity2">Switch to Activity 2</string>
     <string name="switch_to_activity1">Switch to Activity 1</string>
