webactivity added, infoactivity still incomplete

--- a/UE_4/app/src/main/res/values/strings.xml
+++ b/UE_4/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="lorem_ipsum">
         This application was created by Konstantin Benischke and Marcel Ewinger. It is a page that shows what a constraintLayout is and can do. Pretty impressive, huh?
     </string>
+    <string name="title_activity_web">WebActivity</string>
 </resources>
