--- a/UE_5/UE5_Ewinger_Benischke/app/src/main/res/values/strings.xml
+++ b/UE_5/UE5_Ewinger_Benischke/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
         <item>meter</item>
         <item>centimeter</item>
         <item>millimeter</item>
-        <item>nautical_mile</item>
+        <item>nautical mile</item>
         <item>mile</item>
         <item>yard</item>
         <item>feet</item>
