--- a/UE8/app/src/main/res/values/strings.xml
+++ b/UE8/app/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     </string>
     <string name="title_activity_web">WebActivity</string>
     <string name="title_activity_test">TestActivity</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
